backend/get-task/manifests/backend_get_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-get-ai
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-get-ai
  template:
    metadata:
      labels:
        app: backend-get-ai
    spec:
      containers:
        - name: backend-get-ai
          image: devacraifuture.azurecr.io/backend_get:ad78eccce8e37b9f4f6bfa43c0946cc204156571
          imagePullPolicy: Always
          ports: 
            - containerPort: 5000
