backend/get-task/manifests/backend_get_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-get-svc-ai
spec:
  selector:
    app: backend-get-ai
  ports:
    - port: 9030
      targetPort: 5000
  type: ClusterIP
