backend/get-task/manifests/get_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-get-ingress
  annotations:
    kubernetes.io/ingress.class: "azure-application-gateway"
    appgw.ingress.kubernetes.io/health-probe-path: "/health"
    appgw.ingress.kubernetes.io/health-probe-status-codes: "200-399"
    appgw.ingress.kubernetes.io/override-frontend-port: "80"
    appgw.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: "azure-application-gateway"
  rules:
    - host: neuralixget.apforge.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-get-svc-ai
                port:
                  number: 9030
          - path: /tasks
            pathType: Prefix
            backend:
              service:
                name: backend-get-svc-ai
                port:
                  number: 9030
